fix: service tests sonar issues